--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home Butler</title>
+    <title>Home Butler UI</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
